--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,6 @@
 *.rds filter=lfs diff=lfs merge=lfs -text
-*.RDS
-*.grd
-*.gri
-*.tif
-*.tiff
+*.RDS filter=lfs diff=lfs merge=lfs -text
+*.grd filter=lfs diff=lfs merge=lfs -text
+*.gri filter=lfs diff=lfs merge=lfs -text
+*.tif filter=lfs diff=lfs merge=lfs -text
+*.tiff filter=lfs diff=lfs merge=lfs -text
